--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "express-mongoose-es6-rest-api",
-  "version": "2.0.0",
-  "description": "A Boilerplate application for building REST APIs using express, mongoose in ES6 with code coverage",
-  "author": "Kunal Kapadia <kunalkapadia12@gmail.com>",
+  "name": "factorio-builds-api",
+  "version": "1.0.0",
+  "description": "The back-end API for Factorio Builds",
+  "author": "Jean-Philippe Sirois <jp@veksen.net>",
   "main": "index.js",
   "private": false,
   "engines": {
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:KunalKapadia/express-mongoose-es6-rest-api.git"
+    "url": "git@github.com:veksen/factorio-builds-api.git"
   },
   "keywords": [
     "express",
